--- a/src/Pages/Services/Service.css
+++ b/src/Pages/Services/Service.css
@@ -2,3 +2,8 @@
     display: grid;
     grid-template-columns: repeat(3,1fr);
 }
+.single-card{
+   border: 1px solid lightblue;
+   border-radius: 20px;
+   
+}
