--- a/src/Pages/Header/Header.css
+++ b/src/Pages/Header/Header.css
@@ -1,21 +1,3 @@
-
-.navber{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
-.navber a{
- text-decoration: none;
- margin-left: 10px;
- padding: 10px;
- color: white;
- font-size: 20px;
- 
-}
-
-.navber a:hover{
-    background-color: gold;
-    color: white;
+.sing-Out{
+    cursor: pointer;
 }
