reset button added

--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -16,3 +16,10 @@
  width: 200px;
  font-size: 20px;
 }
+
+.reset-button{
+  margin-left: 580px;
+ width: 200px;
+ font-size: 20px;
+ margin-top: 5px;
+}
