--- a/src/Pages/Services/Service.css
+++ b/src/Pages/Services/Service.css
@@ -4,7 +4,13 @@
 }
 .single-card{
    border: 1px solid lightblue;
-   border-radius: 20px;
+   border-radius: 50px;
    width: 500px;
+   height: auto;
+   margin-bottom: 20px;
    
+}
+.single-card img{
+    width: 300px;
+    height: 200px;
 }
